# path-tmpl-worker

./: .gitignore  LICENSE  README.md  changelog.md  logging.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  tests.yml
docker/: Dockerfile  entrypoint.sh
path_tmpl_worker/: __init__.py  api.py  celery_app.py  config.py  constants.py  models.py  ordered_document_cfv.py  tasks.py  template.py  utils.py
path_tmpl_worker/cli/: main.py
path_tmpl_worker/db/: __init__.py  api.py  engine.py  orm.py  session.py
tests/: conftest.py  test_api.py  test_document_context.py  test_get_evaluated_path.py  test_orm_api.py  utils.py
